--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "apptrivias",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "start": "react-scripts start",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "dev": "vite --host",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
@@ -12,7 +15,7 @@
   "dependencies": {
     "@auth0/auth0-react": "^2.2.4",
     "bootstrap": "^5.3.3",
-    "emailjs-com": "^3.2.0",
+    "@emailjs/browser": "^3.2.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
